# vision-mcp

./: .gitignore  README.md  pyproject.toml
src/vision_mcp/: __init__.py  __main__.py  config.py  ollama.py  server.py  tools.py  video.py
tests/: test_smoke.py
