[project]
name = "vision-mcp"
version = "0.1.0"
description = "MCP server that adds vision capabilities to text-only models via local Ollama vision models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "jack" }]
keywords = ["mcp", "ollama", "vision", "llm", "model-context-protocol"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
vision-mcp = "vision_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vision_mcp"]
